worked on angular-portfolio and memories project

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,20 @@
         <a href="#/about">About</a>
         <a href="#/contact">Contact</a>
     </div>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="span4"><img/></div>
+          <div class="span8">
+            <p>"My wardrobe is full of t-shirts but I wear always the same"</p>
+            <p>Leonardo 25 years old. His wardrobe is full of t-shirts, he doesn't buy them because of necessity but because he found something attractive or original. He's willing to pay more if he find something really special.</p>
+          </div>
+          <div class="span12">
+            <img/>
+          </div>
+        </div>
+      </div>
+    </section>
     <div ng-view></div>
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
